[package]
name = "redact-client"
version = "0.1.0"
authors = ["Alexandre Pauwels <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Receives request for private data and decrypts it to display securely in browser"
documentation = "https://docs.rs/redact-client"
repository = "https://github.com/pauwels-labs/redact-client.git"
readme = "README.md"
exclude = [
        ".dockerignore",
        ".git",
        ".gitignore",
        ".lighthouse",
        "Dockerfilest",
        "Dockerfilest.dev",
        "Dockerfilest.test",
        "OWNERS",
        "OWNERS_ALIASES",
        "tarpaulin-report.html"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
warp = "0.3.0"
redact-config = "1.0.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3.12"
reqwest = { version = "0.11.0", features = ["json", "rustls-tls"] }
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1.42"
async-session = "2.0.1"
sha2 = "0.9.2"
handlebars = "4.0.0"
thiserror = "1.0.23"
rand = "0.8.3"
rand_pcg = "0.3.0"
warp-sessions = "1.0.13"
base64 = "0.13.0"
sodiumoxide = "0.2.6"
http = "0.2.4"
redact-crypto = { git = "https://github.com/pauwels-labs/redact-crypto.git", rev = "a0d7a857a2605c8bec0fcbdcc42aa7426afe0ea7" }
bson = "1.2.2"
regex = "1.5.4"
percent-encoding = "2.1.0"
chrono = "0.4.19"
url = "2.2.2"
addr = "0.14.0"
bytes = "1.0.1"
itertools = "0.10.1"
strum = { version = "0.21"}
pkcs8 = { version = "0.7.5", features = ["pem"] }

[dev-dependencies]
mockall = "0.9.0"
mockito = "0.30.0"
mongodb = "1.2.1"
