[package]
name = "redact-client"
version = "0.1.0"
authors = ["Alexandre Pauwels <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Receives request for private data and decrypts it to display securely in browser"
documentation = "https://docs.rs/redact-client"
repository = "https://github.com/pauwels-labs/redact-client.git"
readme = "README.md"
exclude = [
        ".dockerignore",
        ".git",
        ".gitignore",
        ".lighthouse",
        "Dockerfilest",
        "Dockerfilest.dev",
        "Dockerfilest.test",
        "OWNERS",
        "OWNERS_ALIASES",
        "tarpaulin-report.html"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
redact-config = "1.0.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
futures = "0.3.17"
reqwest = { version = "0.11.6", features = ["json", "rustls-tls"] }
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1.51"
async-session = "3.0.0"
sha2 = "0.9.8"
handlebars = "4.1.5"
thiserror = "1.0.30"
rand = "0.8.4"
rand_pcg = "0.3.1"
warp-sessions = "1.0.13"
base64 = "0.13.0"
sodiumoxide = "0.2.7"
http = "0.2.5"
redact-crypto = { git = "https://github.com/pauwels-labs/redact-crypto.git", rev = "97b7deff61266e2a3a3be1f1f5aa857b45b89d73" }
bson = "2.0.1"
regex = "1.5.4"
percent-encoding = "2.1.0"
chrono = "0.4.19"
url = "2.2.2"
addr = "0.14.0"
bytes = "1.1.0"
itertools = "0.10.1"
strum = { version = "0.23.0"}
pkcs8 = { version = "0.8.0", features = ["pem"] }

[dev-dependencies]
mockall = "0.9.0"
mockito = "0.30.0"
mongodb = "1.2.1"
